...
              initialParams={{ isCompletedPage: false }}
              options={{
                tabBarIcon: () => (
                  <Image
                    source={require("./assets/icons/tab-bar/tabGoalThick.png")}
                    style={styles.tabIcon}
                    testID="Goals_Screen"
                    accessibilityLabel="Goals_Screen"
                  />
                ),
              }}
            />
            <Stack.Screen
...
              }}
            />
            <Stack.Screen
              name="Profile"
              options={{
                tabBarIcon: () => (
                  <AntDesign name={"user"} size={20} testID="Profile_Screen" accessibilityLabel="Profile_Screen"></AntDesign>
                ),
              }}
            >
              {(props) => <ProfileScreen {...props} refresh={refresh} setRefresh={setRefresh} />}
            </Stack.Screen>
            <Stack.Screen
...
